--- a/www/index.html
+++ b/www/index.html
@@ -6,11 +6,15 @@
 		<link rel="stylesheet" href="main.css" />
 	</head>
 	<body onload="load()" onhashchange="load()">
-		<div id="title"></div>
-		<div id="nav"></div>
-		<hr />
-		<div id="main"></div>
-		<hr />
-		<div id="children"></div>
+		<div id="header">
+			<div id="title"></div>
+			<div id="nav"></div>
+		</div>
+		<div id="content">
+			<div id="main"></div>
+			<div id="children"></div>
+		</div>
+		<div id="footer">
+		</div>
 	</body>
 </html>
