--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
 			<div id="children"></div>
 		</div>
 		<div id="footer">
+			wh.brwyatt.net created by <a href="https://brwyatt.net/">Bryan Wyatt</a> and is available on <a href="https://github.com/brwyatt/warhammer_armies">GitHub</a> under the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GNU General Public License v3.0</a>
 		</div>
 	</body>
 </html>
